arkts_static_test/02_LexicalElements/ets_cases/2.1_Use_of_Unicode_Characters/compile-fail/LEX_02_01_013_FAIL_LONE_LOW_SURROGATE.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id LEX_02_01_013_FAIL_LONE_LOW_SURROGATE
 * @expect compile-fail
 * @section 2.1
 * @design 反向用例：spec要求字符串中不允许孤立低代理(U+DC00)，但编译器实际允许
 * @note 反向用例：spec 要求报错，但 ArkTS 实际编译通过
 *       ⚠️ SPEC 不一致：spec/experimental.md 未明确定义孤立代理规则，但Unicode规范(UAX#16)要求代理必须成对使用
 *       分类：D 类（Spec 与实现不一致）
 */
function testLoneLowSurrogate(): void {
  let s: string = "\uDC00"
}
